// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<StepResult /> should render with O duration 1`] = `
.c5 {
  max-width: 124rem;
  margin: 0 auto;
  padding: 0 2rem;
}

.c5 > *:first-child {
  margin-top: 0;
}

.c5 > *:last-child {
  margin-bottom: 0;
}

.c4 {
  padding: 3.2rem 0;
  background-color: transparent;
  color: #3e486e;
}

.c9 {
  position: absolute;
  background-color: #f66663;
  border-radius: none;
  top: 50%;
  left: 0;
  width: 0.4rem;
  height: 100%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

.c7 {
  position: relative;
  margin: 0 0 1rem 0;
  color: #2f3b6c;
  font-weight: 600;
  font-size: 1.8rem;
  font-family: "Open Sans",sans-serif;
  line-height: 1.25;
  margin-left: -2.4rem;
  padding-left: 2.4rem;
}

.c11 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: content-box;
  font-weight: 500;
  font-size: 1.6rem;
  line-height: 1.125em;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 0.6rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,-webkit-transform 100ms linear;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  height: 5.2rem;
  padding: 0 4.4rem;
  color: #3e486e;
  background: #fff;
  border-color: #bbcadf;
  box-shadow: none;
  opacity: 1;
}

.c11:link,
.c11:visited {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #3e486e;
}

.c11:not([disabled]):hover,
.c11:not([disabled]):active,
.c11:not([disabled]):focus {
  opacity: 1;
  -webkit-transform: translateY(-2px);
  -ms-transform: translateY(-2px);
  transform: translateY(-2px);
  background: #fff;
  border-color: #dee5ef;
}

.c11[disabled] {
  color: rgba(62,72,110,0.4);
  box-shadow: none;
  cursor: not-allowed;
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  width: auto;
  min-height: 48px;
  color: #3e486e;
  background-color: #fff;
  border-color: #7994d4;
  border-style: solid;
  border-width: 2px;
  border-radius: 0.6rem;
  box-shadow: none;
  -webkit-animation: none;
  animation: none;
}

.c3 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  padding: 1rem 1.6rem;
  text-align: left;
}

.c0 {
  margin-top: 3.2rem;
  margin-bottom: 2rem;
  color: #4d73b8;
  font-weight: 600;
  font-size: 1.8rem;
  font-family: "Open Sans",sans-serif;
}

.c1 {
  color: #3e486e;
  font-weight: 700;
  font-size: 1.8rem;
  white-space: nowrap;
}

.c6 {
  padding: 2rem 2.4rem;
  color: #3e486e;
  border-radius: 0.6rem;
  border: 1px solid #bbcadf;
  background-color: #fff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: stretch;
  -webkit-justify-content: stretch;
  -ms-flex-pack: stretch;
  justify-content: stretch;
}

.c6 > *:first-child {
  margin-top: 0;
}

.c6 > *:last-child {
  margin-bottom: 0;
}

.c8 {
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
  margin-bottom: 0;
  padding-top: 1rem;
  padding-bottom: 1rem;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin: 0;
}

.c13 + .c12 {
  margin-left: 4rem;
}

@media (max-width:600px) {
  .c5 {
    padding: 0 1rem;
  }
}

@media print {
  .c5 {
    max-width: 100%;
    padding: 0;
  }
}

@media (max-width:600px) {
  .c7 {
    margin-left: -1rem;
    padding-left: 1.6rem;
  }
}

@media (max-width:600px) {
  .c7 {
    font-size: 1.6rem;
  }
}

@media (max-width:600px) {
  .c11 {
    font-size: 1.4rem;
  }
}

@media (max-width:600px) {
  .c11 {
    padding: 0 3rem;
  }
}

@media (max-width:600px) {
  .c1 {
    font-size: 1.6rem;
  }
}

@media (max-width:600px) {
  .c6 {
    padding: 1.6rem 1rem;
  }
}

@media print {
  .c6 {
    padding: 0 5pt;
    border: none;
  }
}

@media (max-width:1180px) {
  .c6 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-align-items: stretch;
    -webkit-box-align: stretch;
    -ms-flex-align: stretch;
    align-items: stretch;
    max-width: 60rem;
    margin-right: auto;
    margin-left: auto;
  }
}

@media (max-width:1180px) {
  .c8 {
    margin-bottom: 1.6rem;
  }
}

@media (max-width:600px) {
  .c8 {
    padding-top: 0;
    padding-bottom: 0;
  }
}

@media (max-width:1180px) {
  .c10 {
    -webkit-box-pack: space-around;
    -webkit-justify-content: space-around;
    -ms-flex-pack: space-around;
    justify-content: space-around;
  }
}

@media (max-width:1180px) {
  .c13 + .c12 {
    margin-left: 0;
  }
}

<div>
  <h2
    class="c0"
  >
    Durée du préavis
  </h2>
  <strong
    class="c1"
  >
    Aucun préavis
  </strong>
  <p>
    Le code du travail et la convention collective ne prévoient pas de préavis.
  </p>
  <div
    class="c2"
  >
    <div
      class="c3"
      role="alert"
    >
      L’existence ou la durée du préavis de licenciement peut être prévue, par la loi pour certains cas particuliers, par un accord d’entreprise ou à défaut par un usage dans l’entreprise.
    </div>
  </div>
  <h2
    class="c0"
  >
    Détails
  </h2>
  <p>
    Il s’agit de la durée la plus longue entre la durée légale prévue par le Code du travail et la durée conventionnelle prévue par la convention collective:
  </p>
  <ul>
    <li>
      Durée légale:
       
      Aucun préavis
    </li>
    <li>
      Durée conventionnelle:
       
      Aucun préavis
    </li>
  </ul>
  <p>
    Éléments saisis :
  </p>
  <ul>
    <li>
      Licenciement pour faute grave
       : 
      <strong>
        Non
      </strong>
    </li>
    <li>
      Reconnu en tant que travailleur handicapé
       : 
      <strong>
        Non
      </strong>
    </li>
    <li>
      Ancienneté selon le code du travail
       : 
      <strong>
        moins de 6 mois
      </strong>
    </li>
  </ul>
  <ul>
    <li>
      Catégorie socio-professionnelle
       : 
      <strong>
        Employés
      </strong>
    </li>
    <li>
      Ancienneté selon la convention collective
       : 
      <strong>
        moins de 1 mois
      </strong>
    </li>
    <li>
      Convention collective
       : 
      <strong>
        Convention collective nationale des transports routiers et activités auxiliaires du transport du 21 décembre 1950
      </strong>
    </li>
  </ul>
  <h2
    class="c0"
  >
    Source
  </h2>
  <p>
    <a
      href="https://www.legifrance.gouv.fr/affichCodeArticle.do?idArticle=LEGIARTI000006901112&cidTexte=LEGITEXT000006072050&dateTexte=20080501"
      rel="noopener noreferrer"
      target="_blank"
      title="Consultez l’article l.1234-1 du code du travail"
    >
      Article L.1234-1 du code du travail
    </a>
    , 
    <a
      href="https://www.legifrance.gouv.fr/affichIDCCArticle.do;jsessionid=9D32D1AB24BC5ACF016410CDFEE667F3.tplgfr24s_3?idArticle=KALIARTI000005849509&cidTexte=KALITEXT000005678903&dateTexte=29990101&categorieLien=id"
      rel="noopener noreferrer"
      target="_blank"
      title="Consultez l’annexe ii, article 13"
    >
      Annexe II, article 13
    </a>
  </p>
  <div
    class="c4"
  >
    <div
      class="c5"
    >
      <div
        class="c6"
      >
        <h3
          class="c7 c8"
        >
          <div
            class="c9"
          />
          Avez-vous trouvé la réponse à votre question ?
        </h3>
        <p
          class="c10"
        >
          <button
            class="c11 c12 c13"
          >
            Non
          </button>
          <button
            class="c11 c12 c13"
          >
            Oui
          </button>
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`<StepResult /> should render with both CC duration and CDT duration 1`] = `
.c5 {
  max-width: 124rem;
  margin: 0 auto;
  padding: 0 2rem;
}

.c5 > *:first-child {
  margin-top: 0;
}

.c5 > *:last-child {
  margin-bottom: 0;
}

.c4 {
  padding: 3.2rem 0;
  background-color: transparent;
  color: #3e486e;
}

.c9 {
  position: absolute;
  background-color: #f66663;
  border-radius: none;
  top: 50%;
  left: 0;
  width: 0.4rem;
  height: 100%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

.c7 {
  position: relative;
  margin: 0 0 1rem 0;
  color: #2f3b6c;
  font-weight: 600;
  font-size: 1.8rem;
  font-family: "Open Sans",sans-serif;
  line-height: 1.25;
  margin-left: -2.4rem;
  padding-left: 2.4rem;
}

.c11 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: content-box;
  font-weight: 500;
  font-size: 1.6rem;
  line-height: 1.125em;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 0.6rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,-webkit-transform 100ms linear;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  height: 5.2rem;
  padding: 0 4.4rem;
  color: #3e486e;
  background: #fff;
  border-color: #bbcadf;
  box-shadow: none;
  opacity: 1;
}

.c11:link,
.c11:visited {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #3e486e;
}

.c11:not([disabled]):hover,
.c11:not([disabled]):active,
.c11:not([disabled]):focus {
  opacity: 1;
  -webkit-transform: translateY(-2px);
  -ms-transform: translateY(-2px);
  transform: translateY(-2px);
  background: #fff;
  border-color: #dee5ef;
}

.c11[disabled] {
  color: rgba(62,72,110,0.4);
  box-shadow: none;
  cursor: not-allowed;
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  width: auto;
  min-height: 48px;
  color: #3e486e;
  background-color: #fff;
  border-color: #7994d4;
  border-style: solid;
  border-width: 2px;
  border-radius: 0.6rem;
  box-shadow: none;
  -webkit-animation: none;
  animation: none;
}

.c3 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  padding: 1rem 1.6rem;
  text-align: left;
}

.c0 {
  margin-top: 3.2rem;
  margin-bottom: 2rem;
  color: #4d73b8;
  font-weight: 600;
  font-size: 1.8rem;
  font-family: "Open Sans",sans-serif;
}

.c1 {
  color: #3e486e;
  font-weight: 700;
  font-size: 1.8rem;
  white-space: nowrap;
}

.c6 {
  padding: 2rem 2.4rem;
  color: #3e486e;
  border-radius: 0.6rem;
  border: 1px solid #bbcadf;
  background-color: #fff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: stretch;
  -webkit-justify-content: stretch;
  -ms-flex-pack: stretch;
  justify-content: stretch;
}

.c6 > *:first-child {
  margin-top: 0;
}

.c6 > *:last-child {
  margin-bottom: 0;
}

.c8 {
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
  margin-bottom: 0;
  padding-top: 1rem;
  padding-bottom: 1rem;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin: 0;
}

.c13 + .c12 {
  margin-left: 4rem;
}

@media (max-width:600px) {
  .c5 {
    padding: 0 1rem;
  }
}

@media print {
  .c5 {
    max-width: 100%;
    padding: 0;
  }
}

@media (max-width:600px) {
  .c7 {
    margin-left: -1rem;
    padding-left: 1.6rem;
  }
}

@media (max-width:600px) {
  .c7 {
    font-size: 1.6rem;
  }
}

@media (max-width:600px) {
  .c11 {
    font-size: 1.4rem;
  }
}

@media (max-width:600px) {
  .c11 {
    padding: 0 3rem;
  }
}

@media (max-width:600px) {
  .c1 {
    font-size: 1.6rem;
  }
}

@media (max-width:600px) {
  .c6 {
    padding: 1.6rem 1rem;
  }
}

@media print {
  .c6 {
    padding: 0 5pt;
    border: none;
  }
}

@media (max-width:1180px) {
  .c6 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-align-items: stretch;
    -webkit-box-align: stretch;
    -ms-flex-align: stretch;
    align-items: stretch;
    max-width: 60rem;
    margin-right: auto;
    margin-left: auto;
  }
}

@media (max-width:1180px) {
  .c8 {
    margin-bottom: 1.6rem;
  }
}

@media (max-width:600px) {
  .c8 {
    padding-top: 0;
    padding-bottom: 0;
  }
}

@media (max-width:1180px) {
  .c10 {
    -webkit-box-pack: space-around;
    -webkit-justify-content: space-around;
    -ms-flex-pack: space-around;
    justify-content: space-around;
  }
}

@media (max-width:1180px) {
  .c13 + .c12 {
    margin-left: 0;
  }
}

<div>
  <h2
    class="c0"
  >
    Durée du préavis
  </h2>
  <p>
    À partir des éléments que vous avez saisis, la durée du préavis de licenciement est estimée à :
  </p>
  <p>
    <strong
      class="c1"
    >
       
      1 mois
    </strong>
  </p>
  <div
    class="c2"
  >
    <div
      class="c3"
      role="alert"
    >
      Une durée de préavis de licenciement ou une condition d’ancienneté plus favorable au salarié que ce que prévoit le code du travail peut être prévue par la loi pour certains cas particuliers, par un accord d’entreprise, le contrat de travail ou les usages.
    </div>
  </div>
  <h2
    class="c0"
  >
    Détails
  </h2>
  <p>
    Il s’agit de la durée la plus longue entre la durée légale prévue par le Code du travail et la durée conventionnelle prévue par la convention collective:
  </p>
  <ul>
    <li>
      Durée légale:
       
      <strong>
        1 mois
      </strong>
    </li>
    <li>
      Durée conventionnelle:
       
      <strong>
        1 mois
      </strong>
    </li>
  </ul>
  <p>
    Éléments saisis :
  </p>
  <ul>
    <li>
      Licenciement pour faute grave
       : 
      <strong>
        Non
      </strong>
    </li>
    <li>
      Reconnu en tant que travailleur handicapé
       : 
      <strong>
        Non
      </strong>
    </li>
    <li>
      Ancienneté selon le code du travail
       : 
      <strong>
        6 mois à moins de 2 ans
      </strong>
    </li>
  </ul>
  <ul>
    <li>
      Catégorie socio-professionnelle
       : 
      <strong>
        Employés
      </strong>
    </li>
    <li>
      Ancienneté selon la convention collective
       : 
      <strong>
        1 mois à moins de 2 ans
      </strong>
    </li>
    <li>
      Convention collective
       : 
      <strong>
        Convention collective nationale des transports routiers et activités auxiliaires du transport du 21 décembre 1950
      </strong>
    </li>
  </ul>
  <h2
    class="c0"
  >
    Source
  </h2>
  <p>
    <a
      href="https://www.legifrance.gouv.fr/affichCodeArticle.do?idArticle=LEGIARTI000006901112&cidTexte=LEGITEXT000006072050&dateTexte=20080501"
      rel="noopener noreferrer"
      target="_blank"
      title="Consultez l’article l.1234-1 du code du travail"
    >
      Article L.1234-1 du code du travail
    </a>
    , 
    <a
      href="https://www.legifrance.gouv.fr/affichIDCCArticle.do;jsessionid=9D32D1AB24BC5ACF016410CDFEE667F3.tplgfr24s_3?idArticle=KALIARTI000005849509&cidTexte=KALITEXT000005678903&dateTexte=29990101&categorieLien=id"
      rel="noopener noreferrer"
      target="_blank"
      title="Consultez l’annexe ii, article 13"
    >
      Annexe II, article 13
    </a>
  </p>
  <div
    class="c4"
  >
    <div
      class="c5"
    >
      <div
        class="c6"
      >
        <h3
          class="c7 c8"
        >
          <div
            class="c9"
          />
          Avez-vous trouvé la réponse à votre question ?
        </h3>
        <p
          class="c10"
        >
          <button
            class="c11 c12 c13"
          >
            Non
          </button>
          <button
            class="c11 c12 c13"
          >
            Oui
          </button>
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`<StepResult /> should render with only CC duration 1`] = `
.c5 {
  max-width: 124rem;
  margin: 0 auto;
  padding: 0 2rem;
}

.c5 > *:first-child {
  margin-top: 0;
}

.c5 > *:last-child {
  margin-bottom: 0;
}

.c4 {
  padding: 3.2rem 0;
  background-color: transparent;
  color: #3e486e;
}

.c9 {
  position: absolute;
  background-color: #f66663;
  border-radius: none;
  top: 50%;
  left: 0;
  width: 0.4rem;
  height: 100%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

.c7 {
  position: relative;
  margin: 0 0 1rem 0;
  color: #2f3b6c;
  font-weight: 600;
  font-size: 1.8rem;
  font-family: "Open Sans",sans-serif;
  line-height: 1.25;
  margin-left: -2.4rem;
  padding-left: 2.4rem;
}

.c11 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: content-box;
  font-weight: 500;
  font-size: 1.6rem;
  line-height: 1.125em;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 0.6rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,-webkit-transform 100ms linear;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  height: 5.2rem;
  padding: 0 4.4rem;
  color: #3e486e;
  background: #fff;
  border-color: #bbcadf;
  box-shadow: none;
  opacity: 1;
}

.c11:link,
.c11:visited {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #3e486e;
}

.c11:not([disabled]):hover,
.c11:not([disabled]):active,
.c11:not([disabled]):focus {
  opacity: 1;
  -webkit-transform: translateY(-2px);
  -ms-transform: translateY(-2px);
  transform: translateY(-2px);
  background: #fff;
  border-color: #dee5ef;
}

.c11[disabled] {
  color: rgba(62,72,110,0.4);
  box-shadow: none;
  cursor: not-allowed;
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  width: auto;
  min-height: 48px;
  color: #3e486e;
  background-color: #fff;
  border-color: #7994d4;
  border-style: solid;
  border-width: 2px;
  border-radius: 0.6rem;
  box-shadow: none;
  -webkit-animation: none;
  animation: none;
}

.c3 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  padding: 1rem 1.6rem;
  text-align: left;
}

.c0 {
  margin-top: 3.2rem;
  margin-bottom: 2rem;
  color: #4d73b8;
  font-weight: 600;
  font-size: 1.8rem;
  font-family: "Open Sans",sans-serif;
}

.c1 {
  color: #3e486e;
  font-weight: 700;
  font-size: 1.8rem;
  white-space: nowrap;
}

.c6 {
  padding: 2rem 2.4rem;
  color: #3e486e;
  border-radius: 0.6rem;
  border: 1px solid #bbcadf;
  background-color: #fff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: stretch;
  -webkit-justify-content: stretch;
  -ms-flex-pack: stretch;
  justify-content: stretch;
}

.c6 > *:first-child {
  margin-top: 0;
}

.c6 > *:last-child {
  margin-bottom: 0;
}

.c8 {
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
  margin-bottom: 0;
  padding-top: 1rem;
  padding-bottom: 1rem;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin: 0;
}

.c13 + .c12 {
  margin-left: 4rem;
}

@media (max-width:600px) {
  .c5 {
    padding: 0 1rem;
  }
}

@media print {
  .c5 {
    max-width: 100%;
    padding: 0;
  }
}

@media (max-width:600px) {
  .c7 {
    margin-left: -1rem;
    padding-left: 1.6rem;
  }
}

@media (max-width:600px) {
  .c7 {
    font-size: 1.6rem;
  }
}

@media (max-width:600px) {
  .c11 {
    font-size: 1.4rem;
  }
}

@media (max-width:600px) {
  .c11 {
    padding: 0 3rem;
  }
}

@media (max-width:600px) {
  .c1 {
    font-size: 1.6rem;
  }
}

@media (max-width:600px) {
  .c6 {
    padding: 1.6rem 1rem;
  }
}

@media print {
  .c6 {
    padding: 0 5pt;
    border: none;
  }
}

@media (max-width:1180px) {
  .c6 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-align-items: stretch;
    -webkit-box-align: stretch;
    -ms-flex-align: stretch;
    align-items: stretch;
    max-width: 60rem;
    margin-right: auto;
    margin-left: auto;
  }
}

@media (max-width:1180px) {
  .c8 {
    margin-bottom: 1.6rem;
  }
}

@media (max-width:600px) {
  .c8 {
    padding-top: 0;
    padding-bottom: 0;
  }
}

@media (max-width:1180px) {
  .c10 {
    -webkit-box-pack: space-around;
    -webkit-justify-content: space-around;
    -ms-flex-pack: space-around;
    justify-content: space-around;
  }
}

@media (max-width:1180px) {
  .c13 + .c12 {
    margin-left: 0;
  }
}

<div>
  <h2
    class="c0"
  >
    Durée du préavis
  </h2>
  <p>
    À partir des éléments que vous avez saisis, la durée du préavis de licenciement est estimée à :
  </p>
  <p>
    <strong
      class="c1"
    >
       
      1 mois
    </strong>
  </p>
  <div
    class="c2"
  >
    <div
      class="c3"
      role="alert"
    >
      L’existence ou la durée du préavis de licenciement peut aussi être prévue dans un accord d’entreprise ou à défaut par un usage dans l’entreprise.
    </div>
  </div>
  <h2
    class="c0"
  >
    Détails
  </h2>
  <p>
    Il s’agit de la durée la plus longue entre la durée légale prévue par le Code du travail et la durée conventionnelle prévue par la convention collective:
  </p>
  <ul>
    <li>
      Durée légale:
       
      Aucun préavis
    </li>
    <li>
      Durée conventionnelle:
       
      <strong>
        1 mois
      </strong>
    </li>
  </ul>
  <p>
    Éléments saisis :
  </p>
  <ul>
    <li>
      Licenciement pour faute grave
       : 
      <strong>
        Non
      </strong>
    </li>
    <li>
      Reconnu en tant que travailleur handicapé
       : 
      <strong>
        Non
      </strong>
    </li>
    <li>
      Ancienneté selon le code du travail
       : 
      <strong>
        moins de 6 mois
      </strong>
    </li>
  </ul>
  <ul>
    <li>
      Catégorie socio-professionnelle
       : 
      <strong>
        Employés
      </strong>
    </li>
    <li>
      Ancienneté selon la convention collective
       : 
      <strong>
        1 mois à moins de 2 ans
      </strong>
    </li>
    <li>
      Convention collective
       : 
      <strong>
        Convention collective nationale des transports routiers et activités auxiliaires du transport du 21 décembre 1950
      </strong>
    </li>
  </ul>
  <h2
    class="c0"
  >
    Source
  </h2>
  <p>
    <a
      href="https://www.legifrance.gouv.fr/affichCodeArticle.do?idArticle=LEGIARTI000006901112&cidTexte=LEGITEXT000006072050&dateTexte=20080501"
      rel="noopener noreferrer"
      target="_blank"
      title="Consultez l’article l.1234-1 du code du travail"
    >
      Article L.1234-1 du code du travail
    </a>
    , 
    <a
      href="https://www.legifrance.gouv.fr/affichIDCCArticle.do;jsessionid=9D32D1AB24BC5ACF016410CDFEE667F3.tplgfr24s_3?idArticle=KALIARTI000005849509&cidTexte=KALITEXT000005678903&dateTexte=29990101&categorieLien=id"
      rel="noopener noreferrer"
      target="_blank"
      title="Consultez l’annexe ii, article 13"
    >
      Annexe II, article 13
    </a>
  </p>
  <div
    class="c4"
  >
    <div
      class="c5"
    >
      <div
        class="c6"
      >
        <h3
          class="c7 c8"
        >
          <div
            class="c9"
          />
          Avez-vous trouvé la réponse à votre question ?
        </h3>
        <p
          class="c10"
        >
          <button
            class="c11 c12 c13"
          >
            Non
          </button>
          <button
            class="c11 c12 c13"
          >
            Oui
          </button>
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`<StepResult /> should render with when no CC 1`] = `
.c5 {
  max-width: 124rem;
  margin: 0 auto;
  padding: 0 2rem;
}

.c5 > *:first-child {
  margin-top: 0;
}

.c5 > *:last-child {
  margin-bottom: 0;
}

.c4 {
  padding: 3.2rem 0;
  background-color: transparent;
  color: #3e486e;
}

.c9 {
  position: absolute;
  background-color: #f66663;
  border-radius: none;
  top: 50%;
  left: 0;
  width: 0.4rem;
  height: 100%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

.c7 {
  position: relative;
  margin: 0 0 1rem 0;
  color: #2f3b6c;
  font-weight: 600;
  font-size: 1.8rem;
  font-family: "Open Sans",sans-serif;
  line-height: 1.25;
  margin-left: -2.4rem;
  padding-left: 2.4rem;
}

.c11 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: content-box;
  font-weight: 500;
  font-size: 1.6rem;
  line-height: 1.125em;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 0.6rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,-webkit-transform 100ms linear;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  height: 5.2rem;
  padding: 0 4.4rem;
  color: #3e486e;
  background: #fff;
  border-color: #bbcadf;
  box-shadow: none;
  opacity: 1;
}

.c11:link,
.c11:visited {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #3e486e;
}

.c11:not([disabled]):hover,
.c11:not([disabled]):active,
.c11:not([disabled]):focus {
  opacity: 1;
  -webkit-transform: translateY(-2px);
  -ms-transform: translateY(-2px);
  transform: translateY(-2px);
  background: #fff;
  border-color: #dee5ef;
}

.c11[disabled] {
  color: rgba(62,72,110,0.4);
  box-shadow: none;
  cursor: not-allowed;
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  width: auto;
  min-height: 48px;
  color: #3e486e;
  background-color: #fff;
  border-color: #7994d4;
  border-style: solid;
  border-width: 2px;
  border-radius: 0.6rem;
  box-shadow: none;
  -webkit-animation: none;
  animation: none;
}

.c3 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  padding: 1rem 1.6rem;
  text-align: left;
}

.c0 {
  margin-top: 3.2rem;
  margin-bottom: 2rem;
  color: #4d73b8;
  font-weight: 600;
  font-size: 1.8rem;
  font-family: "Open Sans",sans-serif;
}

.c1 {
  color: #3e486e;
  font-weight: 700;
  font-size: 1.8rem;
  white-space: nowrap;
}

.c6 {
  padding: 2rem 2.4rem;
  color: #3e486e;
  border-radius: 0.6rem;
  border: 1px solid #bbcadf;
  background-color: #fff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: stretch;
  -webkit-justify-content: stretch;
  -ms-flex-pack: stretch;
  justify-content: stretch;
}

.c6 > *:first-child {
  margin-top: 0;
}

.c6 > *:last-child {
  margin-bottom: 0;
}

.c8 {
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
  margin-bottom: 0;
  padding-top: 1rem;
  padding-bottom: 1rem;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin: 0;
}

.c13 + .c12 {
  margin-left: 4rem;
}

@media (max-width:600px) {
  .c5 {
    padding: 0 1rem;
  }
}

@media print {
  .c5 {
    max-width: 100%;
    padding: 0;
  }
}

@media (max-width:600px) {
  .c7 {
    margin-left: -1rem;
    padding-left: 1.6rem;
  }
}

@media (max-width:600px) {
  .c7 {
    font-size: 1.6rem;
  }
}

@media (max-width:600px) {
  .c11 {
    font-size: 1.4rem;
  }
}

@media (max-width:600px) {
  .c11 {
    padding: 0 3rem;
  }
}

@media (max-width:600px) {
  .c1 {
    font-size: 1.6rem;
  }
}

@media (max-width:600px) {
  .c6 {
    padding: 1.6rem 1rem;
  }
}

@media print {
  .c6 {
    padding: 0 5pt;
    border: none;
  }
}

@media (max-width:1180px) {
  .c6 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-align-items: stretch;
    -webkit-box-align: stretch;
    -ms-flex-align: stretch;
    align-items: stretch;
    max-width: 60rem;
    margin-right: auto;
    margin-left: auto;
  }
}

@media (max-width:1180px) {
  .c8 {
    margin-bottom: 1.6rem;
  }
}

@media (max-width:600px) {
  .c8 {
    padding-top: 0;
    padding-bottom: 0;
  }
}

@media (max-width:1180px) {
  .c10 {
    -webkit-box-pack: space-around;
    -webkit-justify-content: space-around;
    -ms-flex-pack: space-around;
    justify-content: space-around;
  }
}

@media (max-width:1180px) {
  .c13 + .c12 {
    margin-left: 0;
  }
}

<div>
  <h2
    class="c0"
  >
    Durée du préavis
  </h2>
  <p>
    À partir des éléments que vous avez saisis, la durée du préavis de licenciement est estimée à :
  </p>
  <p>
    <strong
      class="c1"
    >
       
      2 mois
    </strong>
  </p>
  <div
    class="c2"
  >
    <div
      class="c3"
      role="alert"
    >
      Une durée de préavis de licenciement ou une condition d’ancienneté plus favorable au salarié peut être prévue par une convention collective, un accord de branche, un accord d’entreprise ou le contrat de travail ou les usages
    </div>
  </div>
  <h2
    class="c0"
  >
    Détails
  </h2>
  <ul>
    <li>
      Durée légale:
       
      <strong>
        2 mois
      </strong>
    </li>
    <li>
      Durée conventionnelle:
       
      La convention collective n'a pas été renseignée.
    </li>
  </ul>
  <p>
    Éléments saisis :
  </p>
  <ul>
    <li>
      Licenciement pour faute grave
       : 
      <strong>
        Non
      </strong>
    </li>
    <li>
      Reconnu en tant que travailleur handicapé
       : 
      <strong>
        Non
      </strong>
    </li>
    <li>
      Ancienneté selon le code du travail
       : 
      <strong>
        plus de 2 ans
      </strong>
    </li>
  </ul>
  <div
    class="c4"
  >
    <div
      class="c5"
    >
      <div
        class="c6"
      >
        <h3
          class="c7 c8"
        >
          <div
            class="c9"
          />
          Avez-vous trouvé la réponse à votre question ?
        </h3>
        <p
          class="c10"
        >
          <button
            class="c11 c12 c13"
          >
            Non
          </button>
          <button
            class="c11 c12 c13"
          >
            Oui
          </button>
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`<StepResult /> should render with when unhandled CC 1`] = `
.c5 {
  max-width: 124rem;
  margin: 0 auto;
  padding: 0 2rem;
}

.c5 > *:first-child {
  margin-top: 0;
}

.c5 > *:last-child {
  margin-bottom: 0;
}

.c4 {
  padding: 3.2rem 0;
  background-color: transparent;
  color: #3e486e;
}

.c9 {
  position: absolute;
  background-color: #f66663;
  border-radius: none;
  top: 50%;
  left: 0;
  width: 0.4rem;
  height: 100%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

.c7 {
  position: relative;
  margin: 0 0 1rem 0;
  color: #2f3b6c;
  font-weight: 600;
  font-size: 1.8rem;
  font-family: "Open Sans",sans-serif;
  line-height: 1.25;
  margin-left: -2.4rem;
  padding-left: 2.4rem;
}

.c11 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: content-box;
  font-weight: 500;
  font-size: 1.6rem;
  line-height: 1.125em;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 0.6rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,-webkit-transform 100ms linear;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  height: 5.2rem;
  padding: 0 4.4rem;
  color: #3e486e;
  background: #fff;
  border-color: #bbcadf;
  box-shadow: none;
  opacity: 1;
}

.c11:link,
.c11:visited {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #3e486e;
}

.c11:not([disabled]):hover,
.c11:not([disabled]):active,
.c11:not([disabled]):focus {
  opacity: 1;
  -webkit-transform: translateY(-2px);
  -ms-transform: translateY(-2px);
  transform: translateY(-2px);
  background: #fff;
  border-color: #dee5ef;
}

.c11[disabled] {
  color: rgba(62,72,110,0.4);
  box-shadow: none;
  cursor: not-allowed;
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  width: auto;
  min-height: 48px;
  color: #3e486e;
  background-color: #fff;
  border-color: #7994d4;
  border-style: solid;
  border-width: 2px;
  border-radius: 0.6rem;
  box-shadow: none;
  -webkit-animation: none;
  animation: none;
}

.c3 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  padding: 1rem 1.6rem;
  text-align: left;
}

.c0 {
  margin-top: 3.2rem;
  margin-bottom: 2rem;
  color: #4d73b8;
  font-weight: 600;
  font-size: 1.8rem;
  font-family: "Open Sans",sans-serif;
}

.c1 {
  color: #3e486e;
  font-weight: 700;
  font-size: 1.8rem;
  white-space: nowrap;
}

.c6 {
  padding: 2rem 2.4rem;
  color: #3e486e;
  border-radius: 0.6rem;
  border: 1px solid #bbcadf;
  background-color: #fff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: stretch;
  -webkit-justify-content: stretch;
  -ms-flex-pack: stretch;
  justify-content: stretch;
}

.c6 > *:first-child {
  margin-top: 0;
}

.c6 > *:last-child {
  margin-bottom: 0;
}

.c8 {
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
  margin-bottom: 0;
  padding-top: 1rem;
  padding-bottom: 1rem;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin: 0;
}

.c13 + .c12 {
  margin-left: 4rem;
}

@media (max-width:600px) {
  .c5 {
    padding: 0 1rem;
  }
}

@media print {
  .c5 {
    max-width: 100%;
    padding: 0;
  }
}

@media (max-width:600px) {
  .c7 {
    margin-left: -1rem;
    padding-left: 1.6rem;
  }
}

@media (max-width:600px) {
  .c7 {
    font-size: 1.6rem;
  }
}

@media (max-width:600px) {
  .c11 {
    font-size: 1.4rem;
  }
}

@media (max-width:600px) {
  .c11 {
    padding: 0 3rem;
  }
}

@media (max-width:600px) {
  .c1 {
    font-size: 1.6rem;
  }
}

@media (max-width:600px) {
  .c6 {
    padding: 1.6rem 1rem;
  }
}

@media print {
  .c6 {
    padding: 0 5pt;
    border: none;
  }
}

@media (max-width:1180px) {
  .c6 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-align-items: stretch;
    -webkit-box-align: stretch;
    -ms-flex-align: stretch;
    align-items: stretch;
    max-width: 60rem;
    margin-right: auto;
    margin-left: auto;
  }
}

@media (max-width:1180px) {
  .c8 {
    margin-bottom: 1.6rem;
  }
}

@media (max-width:600px) {
  .c8 {
    padding-top: 0;
    padding-bottom: 0;
  }
}

@media (max-width:1180px) {
  .c10 {
    -webkit-box-pack: space-around;
    -webkit-justify-content: space-around;
    -ms-flex-pack: space-around;
    justify-content: space-around;
  }
}

@media (max-width:1180px) {
  .c13 + .c12 {
    margin-left: 0;
  }
}

<div>
  <h2
    class="c0"
  >
    Durée du préavis
  </h2>
  <p>
    À partir des éléments que vous avez saisis, la durée du préavis de licenciement est estimée à :
  </p>
  <p>
    <strong
      class="c1"
    >
       
      2 mois
    </strong>
  </p>
  <div
    class="c2"
  >
    <div
      class="c3"
      role="alert"
    >
      Une durée de préavis de licenciement ou une condition d’ancienneté plus favorable au salarié peut être prévue par une convention collective, un accord de branche, un accord d’entreprise ou le contrat de travail ou les usages
      <br />
      Vous pouvez faire une recherche par mots-clés dans
       
      <a
        href="/convention-collective/1561-cordonnerie-multiservice"
      >
        votre convention collective
      </a>
    </div>
  </div>
  <h2
    class="c0"
  >
    Détails
  </h2>
  <p>
    Il s’agit de la durée la plus longue entre la durée légale prévue par le Code du travail et la durée conventionnelle prévue par la convention collective:
  </p>
  <ul>
    <li>
      Durée légale:
       
      <strong>
        2 mois
      </strong>
    </li>
    <li>
      Durée conventionnelle:
       
      La convention collective n'a pas été traitée par nos services.
    </li>
  </ul>
  <p>
    Éléments saisis :
  </p>
  <ul>
    <li>
      Licenciement pour faute grave
       : 
      <strong>
        Non
      </strong>
    </li>
    <li>
      Reconnu en tant que travailleur handicapé
       : 
      <strong>
        Non
      </strong>
    </li>
    <li>
      Ancienneté selon le code du travail
       : 
      <strong>
        plus de 2 ans
      </strong>
    </li>
  </ul>
  <div
    class="c4"
  >
    <div
      class="c5"
    >
      <div
        class="c6"
      >
        <h3
          class="c7 c8"
        >
          <div
            class="c9"
          />
          Avez-vous trouvé la réponse à votre question ?
        </h3>
        <p
          class="c10"
        >
          <button
            class="c11 c12 c13"
          >
            Non
          </button>
          <button
            class="c11 c12 c13"
          >
            Oui
          </button>
        </p>
      </div>
    </div>
  </div>
</div>
`;
